--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-matplotlib==3.2.1
-numpy==1.17.4
-opencv_python==4.1.2.30
-tensorflow_rocm==2.0.0
-tensorflow==2.2.0
+numpy==1.18.1
+matplotlib==3.2.0
+opencv_python==4.2.0.34
+absl_py==0.9.0
+tensorflow==2.1.1
+pycocotools==2.0.1
